--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ a {
     text-decoration: none;
 }
 
-header {
+header, .second {
     background-color: #1F2937;
 }
 
@@ -31,7 +31,38 @@ header {
     color: #F9FAF8;
 }
 
-header a {
+header a, .left p {
     font-size: 18px;
     color: #E5E7EB;
+}
+
+.second .container {
+    max-width: 1000px;
+    height: 500px;
+    display: flex;
+}
+
+h1 {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.image, .left {
+    width: 500px;
+}
+
+.image {
+    height: 300px;
+    background-color: gray;
+    text-align: center;
+}
+
+button {
+    background-color: #3882F6;
+    padding: 4px 24px;
+    margin-top: 10px;
+    color: #F9FAF8;
+    border-radius: 5px;
+    border: none;
 }
