Add styles for fifth section

--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,26 @@ span {
     font-weight: 600;
     font-size: 20px;
 }
+
+.fifth .container {
+    height: 400px;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.action-container {
+    width: 100%;
+    padding: 36px 100px;
+    background-color: #3882F6;
+    display: flex;
+    border-radius: 10px;
+    justify-content: space-between;
+}
+
+.action-container h3, .action-container p {
+    color: #F9FAF8;
+}
+
+.action-container button {
+    border: solid #F9FAF8 2px;
+}
